--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML</title>
 </head>
+
 <body>
-    <h1>Pratiksha</h1>
-    
+    <h1>Avengers</h1>
+    <h2>Iron Man</h2>
+    <p>Also goes by the name <b>Tony stark</b></p>
+    <h2>Captain America</h2>
+    <p>Also goes by the name <b>Steve Rogers</b></p>
+    <h2>Hulk</h2>
+    <p>Also goes by the name <b>Bruce Banner</b></p>
+
+
+
+    <h1> unordered List in HTML</h1>
+    <ul>
+        <li>Jam</li>
+        <li>Bread</li>
+        <li>Milk</li>
+        <li>Samosa</li>
+    </ul>
+    <h1> ordered List in HTML</h1>
+    <ol>
+        <li>Jam</li>
+        <li>Bread</li>
+        <li>Milk</li>
+        <li>Samosa</li>
+    </ol>
+
+    <ol type="A">
+        <li>Jam</li>
+        <li>Bread</li>
+        <li>Milk</li>
+        <li>Samosa</li>
+    </ol>
+
+    <!-- anchor tag -->
+    <a href="https://www.google.com/">Google</a>
+    <a href="https://www.apnacollege.in/home-post-login">Apna College</a>
+
+    <!-- Image Element -->
+    <img src="Pratiksha_Img.jpg" alt="Pratiksha Dareker">
+
+    <!-- Practice -->
+    <h2>List of Fruits</h2>
+    <ul>
+        <li>Apple <a href="https://5.imimg.com/data5/AK/RA/MY-68428614/apple-500x500.jpg">see an apple</a></li>
+        <li>Orange <a href="https://5.imimg.com/data5/SELLER/Default/2020/9/RI/WF/GL/106270270/orange.jpg">see an orange</a></li>
+        <li>Mango <a href="https://5.imimg.com/data5/SELLER/Default/2023/9/344928632/OW/RQ/XC/25352890/yellow-mango.jpeg">see an mango</a></li>
+    </ul>
+
+
+
+
 </body>
+
 </html>
