--- a/amazon.html
+++ b/amazon.html
@@ -3,27 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Amazon-like Page</title>
-</head>
+    <title>Amazon Page</title>
+    <link rel="stylesheet" href="styles.css">  </head>
 <body>
     <header>
-        <h1>Amazon</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Cart</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <a href="#" class="logo">Amazon</a>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    
+                    <li><a href="#">Categories</a></li>
+                    <li><a href="#">Deals</a></li>
+                    <li><a href="#">Your Account</a></li>
+                    <li><a href="#">Cart</a></li>
+                </ul>
+            </nav>
+            <form action="#" class="search-bar">
+                <input type="text" placeholder="Search Amazon">
+                <button type="submit">Search</button>
+            </form>
+        </div>
     </header>
 
-    <section class="main-content">
-        <!-- Product listings, categories, etc. -->
-    </section>
+    <main>
+        <div class="container">
+            <section class="hero">
+                <h1>Welcome to Amazon</h1>
+                <p>Find everything you need, from electronics to groceries and more.</p>
+                <a href="#" class="btn">Shop Now</a>
+            </section>
+
+            <section class="products">
+                </section>
+        </div>
+    </main>
 
     <footer>
-        <p>&copy; 2024 Amazon. All rights reserved.</p>
+        <div class="container">
+            <p>&copy; 2024 Amazon</p>
+        </div>
     </footer>
 </body>
 </html>
