--- a/portfolio.html
+++ b/portfolio.html
@@ -60,6 +60,16 @@
     </ul>
     <h4>Made with &hearts; by me</h4>
 
+    <div>
+        <h1>pratiksha</h1>
+        <h2>Apna College</h2>
+        <h3>netflix</h3>
+    </div>
+
+
+
+
+
 </footer>
     
 </body>
